--- a/grove-ctrl/webapp/package.json
+++ b/grove-ctrl/webapp/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "dependencies": {
     "bootstrap": "^4.0.0-beta",
-    "font-awesome": "^4.7.0",
+    "font-awesome": "4.7.0",
     "jquery": "^3.2.1",
     "popper.js": "^1.12.5"
   },
