--- a/scriptrunner_examples/pom.xml
+++ b/scriptrunner_examples/pom.xml
@@ -4,25 +4,20 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.eclipse.ditto.examples.scriptrunner</groupId>
-    <artifactId>scriptrunner</artifactId>
+    <groupId>org.eclipse.ditto.examples.scriptrunner_examples</groupId>
+    <artifactId>scriptrunner_examples</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-    <properties>
-        <ditto.version>0-SNAPSHOT</ditto.version>
-    </properties>
-
     <dependencies>
-        <dependency>
-            <groupId>org.eclipse.ditto</groupId>
-            <artifactId>ditto-services-connectivity-mapping</artifactId>
-            <version>${ditto.version}</version>
-        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>RELEASE</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.ditto.examples.scriptrunner</groupId>
+            <artifactId>scriptrunner</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
@@ -37,8 +32,8 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
-
     </dependencies>
+
 
     <build>
         <plugins>
