--- a/scriptrunner-examples/pom.xml
+++ b/scriptrunner-examples/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.eclipse.ditto.examples.scriptrunner_examples</groupId>
-    <artifactId>scriptrunner_examples</artifactId>
+    <groupId>org.eclipse.ditto.examples.scriptrunner.examples</groupId>
+    <artifactId>scriptrunner-examples</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
