--- a/azure/azure-servicebus-amqp10/pom.xml
+++ b/azure/azure-servicebus-amqp10/pom.xml
@@ -9,10 +9,11 @@
   ~
   ~ SPDX-License-Identifier: EPL-2.0
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+   xmlns="http://maven.apache.org/POM/4.0.0"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
+
    <parent>
       <groupId>org.eclipse.ditto.examples</groupId>
       <artifactId>azure-examples</artifactId>
@@ -20,21 +21,29 @@
       <relativePath>../pom.xml</relativePath>
    </parent>
 
-   <artifactId>azure-eventhub-consumer</artifactId>
-
-   <name>Eclipse Ditto with Azure Event Hubs example</name>
-   <description>Example application that consumes Events from Eclipse Ditto by Azure Event Hub.</description>
+   <artifactId>azure-servicebus-amqp10</artifactId>
+   <name>Eclipse Ditto with Azure Service Bus example</name>
+   <description>Example application that sends to and consumes events from Eclipse Ditto through Azure Service Bus.</description>
 
    <dependencies>
       <dependency>
-         <groupId>org.springframework.cloud</groupId>
-         <artifactId>spring-cloud-stream</artifactId>
+         <groupId>org.amqphub.spring</groupId>
+         <artifactId>amqp-10-jms-spring-boot-starter</artifactId>
+         <version>2.1.1</version>
       </dependency>
       <dependency>
-         <groupId>org.springframework.cloud</groupId>
-         <artifactId>spring-cloud-starter-stream-kafka</artifactId>
+         <groupId>org.messaginghub</groupId>
+         <artifactId>pooled-jms</artifactId>
       </dependency>
-
+      <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>com.google.guava</groupId>
+         <artifactId>guava</artifactId>
+         <version>27.1-jre</version>
+      </dependency>
       <dependency>
          <groupId>org.eclipse.ditto</groupId>
          <artifactId>ditto-protocol-adapter</artifactId>
