--- a/azure/azure-servicebus-amqp10/pom.xml
+++ b/azure/azure-servicebus-amqp10/pom.xml
@@ -47,6 +47,11 @@
          <version>27.1-jre</version>
       </dependency>
       <dependency>
+         <groupId>org.awaitility</groupId>
+         <artifactId>awaitility</artifactId>
+         <scope>compile</scope>
+      </dependency>
+      <dependency>
          <groupId>org.eclipse.ditto</groupId>
          <artifactId>ditto-protocol-adapter</artifactId>
       </dependency>
