--- a/azure/pom.xml
+++ b/azure/pom.xml
@@ -18,7 +18,7 @@
    <parent>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-parent</artifactId>
-      <version>2.1.3.RELEASE</version>
+      <version>2.1.5.RELEASE</version>
    </parent>
    
    <groupId>org.eclipse.ditto.examples</groupId>
@@ -31,7 +31,7 @@
 
    <properties>
       <java.version>8</java.version>
-      <spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
+      <spring-cloud.version>Greenwich.SR1</spring-cloud.version>
       <ditto.version>0.8.0</ditto.version>
       <azure-spring-boot.version>2.1.6</azure-spring-boot.version>
    </properties>
