adapted urls to point to ditto-sandbox
Signed-off-by: krj1imb <johannes.schneider@bosch-si.com>

--- a/java-client/src/main/resources/config.properties
+++ b/java-client/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 # Required configuration properties
 namespace=org.eclipse.ditto
-endpoint=ws://localhost:8080
+endpoint=ws://ditto.eclipse.org
 username1=user1
 password1=pw1
 username2=user2
