--- a/java-client/pom.xml
+++ b/java-client/pom.xml
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>org.eclipse.ditto</groupId>
             <artifactId>ditto-client</artifactId>
-            <version>0-SNAPSHOT</version>
+            <version>1.0.0-M1a</version>
         </dependency>
 
         <dependency>
