#17 extended configuration of examples to be usable with jwt authentication
Signed-off-by: krj1imb <johannes.schneider@bosch-si.com>

--- a/java-client/src/main/resources/config.properties
+++ b/java-client/src/main/resources/config.properties
@@ -1,12 +1,17 @@
-# Required configuration properties
+## Required configuration properties
 namespace=org.eclipse.ditto
 endpoint=ws://ditto.eclipse.org
-username1=user1
-password1=pw1
-username2=user2
-password2=pw2
+## Authentication properties - choose one
+### Basic
+#username=
+#password=
+### Client Credentials
+#clientId=
+#clientSecret=
+#scopes=
+#tokenEndpoint=
 ## Optional proxy configuration
-#proxyHost=
-#proxyPort=
+#proxyHost=localhost
+#proxyPort=3128
 #proxyPrincipal=
 #proxyPassword=
