Changed java-client example to use API 2 since API 1 is deprecated
Signed-off-by: David Schwilk <david.schwilk@bosch.io>

--- a/java-client/src/main/resources/config.properties
+++ b/java-client/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 ## Required configuration properties
 namespace=org.eclipse.ditto
-endpoint=ws://ditto.eclipse.org
+endpoint=ws://ditto.eclipse.org:8080/ws/2
 ## Authentication properties - choose one
 ### Basic
 #username=
