Added search via Akka stream kata
Signed-off-by: David Schwilk <david.schwilk@bosch.io>

--- a/kata/ditto-java-client/search-management/pom.xml
+++ b/kata/ditto-java-client/search-management/pom.xml
@@ -61,6 +61,18 @@
             <version>1.2.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.reactivestreams</groupId>
+            <artifactId>reactive-streams</artifactId>
+            <version>1.0.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-stream_2.12</artifactId>
+            <version>2.5.29</version>
+        </dependency>
+
         <!-- ### Testing ### -->
         <dependency>
             <groupId>junit</groupId>
