--- a/kata/ditto-java-client/policy-management/pom.xml
+++ b/kata/ditto-java-client/policy-management/pom.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <!--
-  ~ Copyright Bosch.IO GmbH 2020
+  ~ Copyright (c) 2020 Contributors to the Eclipse Foundation
   ~
-  ~ All rights reserved, also regarding any disposal, exploitation,
-  ~ reproduction, editing, distribution, as well as in the event of
-  ~ applications for industrial property rights.
+  ~ See the NOTICE file(s) distributed with this work for additional
+  ~ information regarding copyright ownership.
   ~
-  ~ This software is the confidential and proprietary information
-  ~ of Bosch.IO GmbH. You shall not disclose
-  ~ such Confidential Information and shall use it only in
-  ~ accordance with the terms of the license agreement you
-  ~ entered into with Bosch.IO GmbH.
+  ~ This program and the accompanying materials are made available under the
+  ~ terms of the Eclipse Public License 2.0 which is available at
+  ~ http://www.eclipse.org/legal/epl-2.0
+  ~
+  ~ SPDX-License-Identifier: EPL-2.0
   -->
-
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
