--- a/kata/ditto-java-client/policy-management/pom.xml
+++ b/kata/ditto-java-client/policy-management/pom.xml
@@ -17,7 +17,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.bosch.iot.things.katas</groupId>
+    <groupId>org.eclipse.ditto</groupId>
     <artifactId>ditto-java-client-policy-management</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>Kata :: ditto-java-client :: Policy Management</name>
