--- a/kata/ditto-java-client/pom.xml
+++ b/kata/ditto-java-client/pom.xml
@@ -15,7 +15,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.bosch.iot.things.katas</groupId>
+    <groupId>org.eclipse.ditto</groupId>
     <artifactId>ditto-java-client-katas</artifactId>
     <packaging>pom</packaging>
     <version>${revision}</version>
