Issue #46 Add an example using Azure IoT Hub to connect a device simulator to Ditto
Signed-off-by: David Schwilk <david.schwilk@bosch.io>

--- a/azure/pom.xml
+++ b/azure/pom.xml
@@ -39,6 +39,7 @@
    <modules>
       <module>azure-eventhub-consumer</module>
       <module>azure-servicebus-amqp10</module>
+      <module>azure-iot-hub-device-simulator</module>
    </modules>
 
    <dependencyManagement>
