Issue #46: Minor fix and documentation update for Azure IoT Hub example
Signed-off-by: David Schwilk <david.schwilk@bosch.io>

--- a/azure/azure-iot-hub-device-simulator/src/main/resources/config.properties
+++ b/azure/azure-iot-hub-device-simulator/src/main/resources/config.properties
@@ -1,13 +1,13 @@
 # Azure IoT Hub connection config
 connection_string=
 ## Can be HTTPS, AMQPS, MQTT, AMQPS_WS, MQTT_WS;
-connection_protocol=AMQPS_WS
+connection_protocol=
 # Ditto config
 namespace=
 thing_id=
 
 # Proxy config
-#proxy_host=
-#proxy_port=
+proxy_host=
+proxy_port=
 #proxy_username=
 #proxy_password=
