--- a/connection-process-manager/config-template.yml
+++ b/connection-process-manager/config-template.yml
@@ -1,24 +1,5 @@
 ---
 
-# API definition for Bosch IoT Things
-listConnections: # API for listing connections
-  url: https://things.eu-1.bosch-iot-suite.com/api/2/solutions/{{solutionId}}/connections
-  method: GET
-  unwrapJsonPath: $..id
-retrieveConnection: # API for retrieving single connection
-  url: https://things.eu-1.bosch-iot-suite.com/api/2/solutions/{{solutionId}}/connections/{{idEncoded}}
-  method: GET
-retrieveStatus: # API for retrieving connection status
-  url: https://things.eu-1.bosch-iot-suite.com/api/2/solutions/{{solutionId}}/connections/{{idEncoded}}/status
-  method: GET
-
-# Use OAuth2 Client Credential authentication for connection lookup
-oAuth:
-  tokenUrl: https://access.bosch-iot-suite.com/token
-  client: {{clientId}}
-  secret: {{clientSecret}}
-  scope: service:iot-things-eu-1:{{solutionId}}/full-access
-
 # API definition for Eclipse Ditto
 listConnections: # API for listing connections
    url: https://localhost:8080/devops/piggyback/connectivity
@@ -41,6 +22,13 @@ basicAuth:
    user: ditto
    password: "***"
 
+# Use OAuth2 Client Credential authentication for connection lookup
+#oAuth:
+#  tokenUrl: https://access.bosch-iot-suite.com/token
+#  client: {{clientId}}
+#  secret: {{clientSecret}}
+#  scope: service:iot-things-eu-1:{{solutionId}}/full-access
+
 # In order to filter out closed connections you can specify the following filter: $..*[?(@.liveStatus === 'open')]^
 filter: "*" # JSONPath filter applied on the array of connections (default: "*"), based on https://goessner.net/articles/JsonPath/
 
@@ -54,9 +42,9 @@ connectionMonitorInterval: 60 # Monitoring interval for connections trigger new/
 cmdPattern:
   [
     "tunnel.sh",
-    "{{uriDetails.hostname}}",
     "{{uriDetails.username}}",
     "{{uriDetails.password}}",
+    "{{uriDetails.hostname}}",
   ]
 
 logging:
