--- a/azure/azure-iot-hub-device-simulator/src/main/resources/config.properties
+++ b/azure/azure-iot-hub-device-simulator/src/main/resources/config.properties
@@ -1,13 +1,13 @@
 # Azure IoT Hub connection config
 connection_string=
-## Can be HTTPS, AMQPS, MQTT, AMQPS_WS, MQTT_WS;
+## Protocol via which the device connects to Azure IoT Hub. Can be HTTPS, AMQPS, MQTT, AMQPS_WS, MQTT_WS
 connection_protocol=
 # Ditto config
 namespace=
-thing_id=
+thing_name=
 
 # Proxy config
-proxy_host=
-proxy_port=
+#proxy_host=
+#proxy_port=
 #proxy_username=
 #proxy_password=
