--- a/connection-process-manager/config-template.yml
+++ b/connection-process-manager/config-template.yml
@@ -47,12 +47,14 @@ connectionMonitorInterval: 60 # Monitoring interval for connections trigger new/
 # Support Mustache placeholders for connection info, e.g. {{uriDetails.hostname}}
 # Placeholders are matching the Eclipse Ditto connection info, see here: https://www.eclipse.org/ditto/basic-connections.html
 # Extra placeholder objects 'uriDetails' and 'connectionStatusDetails' are available.
+# Script to run have to be in the same directory from where the connection-process-manager is started.
 cmdPattern:
   [
-    "tunnel.sh",
+    "./tunnel.sh",
     "{{uriDetails.username}}",
     "{{uriDetails.password}}",
     "{{uriDetails.hostname}}",
+    "{{uriDetails.port}}",
   ]
 
 logging:
