add deps.ts to manage dependencies in one place, fix some linting errors and code style issues, use fixed path for wsEndpoint
Signed-off-by: Johannes Schneider <johannes.schneider@bosch.io>

--- a/policy-migration/config.template.yml
+++ b/policy-migration/config.template.yml
@@ -3,7 +3,7 @@
 # The following config values are only example values.
 
 # The WebSocket endpoint
-wsEndpoint: ws://localhost:8080/ws/2
+wsEndpoint: ws://localhost:8080
 
 # OAuth Bearer Token
 #bearerToken: <bearerToken>
