use http instead websocket for communication with things backend in policy migration tool (deno does not support basic authentication for websockets)
Signed-off-by: Dominik Guggemos <dominik.guggemos@bosch.io>

--- a/policy-migration/config.template.yml
+++ b/policy-migration/config.template.yml
@@ -2,8 +2,8 @@
 # Config file template for policy migration tool.
 # The following config values are only example values.
 
-# The WebSocket endpoint
-wsEndpoint: ws://localhost:8080
+# The HTTP endpoint
+httpEndpoint: http://localhost:8080
 
 # OAuth Bearer Token
 #bearerToken: <bearerToken>
