--- a/policy-migration/config.template.yml
+++ b/policy-migration/config.template.yml
@@ -32,11 +32,25 @@ httpEndpoint: http://localhost:8080
 # Migration steps that are applied to the policies.
 # Available steps are:
 #  - replaceSubject
+#  - addSubject
+#  - addEntry
 #migrations:
 #  - replaceSubject:
 #      old: <the old subject to replace>
 #      new: <the new subject>
 #      type: <the subject type>
+#  - addSubject:
+#      label: <the label of the policy entry for which to add the subject>
+#      subject: <the new subject>
+#      type: <the subject type>
+#  - addEntry:
+#      label: <the label of the added policy entry>
+#      entry: |
+#      {
+#        subjects: { theSubject: { type: "theType" } },
+#        resources: { "thing:/": { grant: ["READ", "WRITE"], revoke: [] } },
+#      }
+#      replace: <true, if existing entries should be replaced, false otherwise>
 
 # Dry-run mode. If enabled, policy modifications are not applied.
 dryRun: true
