--- a/kata/ditto-java-client/search-management/pom.xml
+++ b/kata/ditto-java-client/search-management/pom.xml
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>org.eclipse.ditto</groupId>
             <artifactId>ditto-client</artifactId>
-            <version>0-SNAPSHOT</version>
+            <version>3.0.0</version>
         </dependency>
 
         <dependency>
