--- a/java-client/pom.xml
+++ b/java-client/pom.xml
@@ -19,6 +19,7 @@
     <groupId>org.eclipse.ditto</groupId>
     <artifactId>ditto-examples-java-client</artifactId>
     <version>0-SNAPSHOT</version>
+    <name>Eclipse Ditto :: Examples :: Java Client Examples</name>
 
     <dependencies>
         <dependency>
